Fix gapping issue of post block

--- a/assets/scss/_post.scss
+++ b/assets/scss/_post.scss
@@ -27,12 +27,19 @@ Pagination
 .post-meta {
   li {
     display: inline-block;
-    margin-right: 15px;
+    margin: 0 15px 8px 0;
 
     &.post-category {
       span {
         display: inline-block;
         margin-bottom: 8px;
+
+        a {
+          padding: 8px 8px;
+          display: inline-block;
+          border-radius: 4px;
+
+        }
 
       }
     }
